Attempting to fix the issue of the links bar being cut off on mobile devices.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body { width:100vw; height:100vh; display:flex; flex-direction:column; justify-c
 
     .titlebox-title { height:100%; font-size:2.5em; padding-left:.4em; padding-right:.4em; white-space:nowrap; text-overflow:ellipsis; }
 
-    .titlebox-links { font-size:1.3em; padding-left:.4em; padding-right:.4em; white-space:nowrap; text-overflow:ellipsis; }
+    .titlebox-links { font-size:1.3em; padding-left:.4em; padding-right:.4em; }
 
   .box-body { height:calc(90vh - 3.13em); display:flex; flex-direction:row; }
 
@@ -36,7 +36,7 @@ body { width:100vw; height:100vh; display:flex; flex-direction:column; justify-c
 
       .titlebox-title {  }
 
-      .titlebox-links {  }
+      .titlebox-links { white-space:nowrap; text-overflow:ellipsis; }
 
     .box-body { flex-direction:row; }
 
